# trespass

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PROPOSAL.md  README.md  biome.json  bts.jsonc  docker-compose.yml  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  tsconfig.json  turbo.json
.claude/: CLAUDE.md
.claude/agents/: backend-engineer.md  frontend-engineer.md  tech-lead.md
.claude/skills/api-conventions/: SKILL.md
.claude/skills/commit/: SKILL.md
.github/workflows/: ci.yml
.vercel/: project.json
agent/: pyproject.toml
agent/src/trespass_agent/: config.py  models.py
apps/server/: .env.example  package.json  tsconfig.json  tsdown.config.ts
apps/web/: .env.example  .gitignore  nuxt.config.ts  package.json
tests/: package.json  tsconfig.json  vitest.config.ts
tests/functional/: routes-branches.test.ts  routes.test.ts
tests/helpers/: db-mock.ts  env-mock.ts
tests/integration/: crypto-pipeline.test.ts  deps-auditor-osv.test.ts  scanner-orchestrator.test.ts
tests/performance/: scanner.bench.ts
tests/regression/: edge-cases.test.ts
tests/security/: crypto-properties.test.ts  detector-coverage.test.ts  route-auth.test.ts  scan-rate-limit.test.ts
tests/smoke/: packages.test.ts  routes.test.ts
tests/unit/: deps-auditor-branches.test.ts  deps-auditor-parse.test.ts  env-validation.test.ts  github-client.test.ts  llm-reviewer-branches.test.ts  llm-reviewer.test.ts  sast-patterns.test.ts  secrets-detector.test.ts  server-bootstrap.test.ts
tests/web/: lib-utils.test.ts  setup.ts  use-notification.test.ts
(+83 files in other folders)
