[project]
name = "trespass-agent"
version = "0.1.0"
description = "Adversarial multi-turn prompt-injection testing agent for trespass"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.0.0",          # ADK (linha GA). Se o 2.x não resolver no seu lock, relaxe para >=1.4.0
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.27",                # cliente async pra chamar o endpoint alvo
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",                # mock de httpx nos testes (sem rede real)
    "ruff>=0.7",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trespass_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]                 # permite assert em testes

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]                # relaxa regras de segurança do linter nos testes

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
